# Attestation-Client-Samples

./: CMakeLists.txt  vcpkg.json
attestation/: CMakeLists.txt  attest.cpp  attest.h  sample_pluton_att.cpp
azure-security-attestation-pluton/x64-windows/include/azure/attestation/: attestation_client.hpp  dll_import_export.hpp
azure-security-attestation-pluton/x64-windows/share/azure-security-attestation-cpp/: azure-security-attestation-cppConfigVersion.cmake  azure-security-attestation-cppTargets-debug.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
azure-security-attestation-pluton/x86-windows/include/azure/attestation/: rtti.hpp
azure-security-attestation-pluton/x86-windows/share/azure-security-attestation-cpp/: azure-security-attestation-cppConfig.cmake  azure-security-attestation-cppConfigVersion.cmake  azure-security-attestation-cppTargets-release.cmake  azure-security-attestation-cppTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
cmake-modules/overlay-ports/azure-security-attestation-cpp/: portfile.cmake  vcpkg.json
